<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="false">
    <ImageView
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/budget_bg"
        android:alpha=".25"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/tv_provideexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_provideexpense"
        android:textStyle="italic|bold"
        android:textSize="@dimen/dimen_15dp"
        android:layout_margin="@dimen/dimen_8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="casual"
        />
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_type"
        android:textStyle="italic|bold"
        android:textSize="@dimen/dimen_10dp"
        android:layout_margin="@dimen/dimen_8dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/tv_provideexpense"
        app:layout_constraintTop_toBottomOf="@+id/tv_provideexpense"
        app:layout_constraintEnd_toEndOf="@id/tv_provideexpense"
        android:fontFamily="casual"
        />
    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_12dp"
        app:layout_constraintEnd_toStartOf="@id/tv_type"
        app:layout_constraintTop_toTopOf="@id/tv_type"
        app:layout_constraintBottom_toBottomOf="@id/tv_type"
        android:src="@android:drawable/star_on"
        android:drawableTint="@color/colorPrimaryDark"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_inputs"
        tools:listitem="@layout/row_item_expense"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        android:background="@drawable/rounded_corner_bg"
        android:padding="@dimen/dimen_8dp"
        />

    <Button
        android:id="@+id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_alert_negetive"
        android:textColor="@android:color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>