<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="false">

    <ImageView
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/budget_bg"
        android:alpha=".25"
        android:scaleType="centerCrop"/>

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:text="@string/how_much_saving"
                android:textStyle="italic|bold"
                android:textSize="@dimen/dimen_15dp"
                android:layout_margin="@dimen/dimen_8dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="casual"
                />

            <TextView
                android:id="@+id/tv_details"
                app:layout_constraintTop_toBottomOf="@id/tv_1"
                app:layout_constraintStart_toStartOf="@id/tv_1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_bg"
                android:padding="@dimen/dimen_12dp"
                android:textColor="@android:color/black"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_12dp"
                android:text="@string/app_details"/>

            <TextView
                android:id="@+id/tv_place_ur_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_details"
                app:layout_constraintStart_toStartOf="@+id/tv_details"
                app:layout_constraintEnd_toEndOf="@id/tv_details"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:text="@string/tv_place_ur_id"
                android:textStyle="italic|bold"
                android:textSize="@dimen/dimen_15dp"
                android:textColor="@color/colorRed"
                android:fontFamily="casual"/>

            <EditText
                android:id="@+id/tv_salary"
                app:layout_constraintTop_toBottomOf="@+id/tv_place_ur_id"
                app:layout_constraintStart_toStartOf="@id/tv_place_ur_id"
                app:layout_constraintEnd_toStartOf="@+id/btn_go"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="50dp"
                android:hint="@string/sal"
                android:inputType="number"
                android:textStyle="italic|bold"
                android:textSize="@dimen/dimen_15dp"
                android:background="@android:color/white"
                android:textColor="@color/colorRed"
                android:fontFamily="casual"
                android:padding="@dimen/dimen_8dp"/>

            <Button
                android:id="@+id/btn_go"
                app:layout_constraintEnd_toEndOf="@id/tv_place_ur_id"
                app:layout_constraintTop_toTopOf="@+id/tv_salary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_salary"
                app:layout_constraintStart_toEndOf="@+id/tv_salary"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:layout_marginLeft="@dimen/dimen_12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GO"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_15dp"
                android:textColor="@android:color/white"
                android:fontFamily="casual"
                android:background="@drawable/rounded_alert_negetive"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>